--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,13 +30,13 @@ const avatarSrcs: Array<string> = [
 <MainLayout>
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
+    btnTitle="Explore Stew Milne on LinkedIn"
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 
   <HeroSection
     title=`Equip Your Projects with <span
-        class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
+        class="text-yellow-500 dark:text-yellow-400">Stew Milne</span>`
     subTitle="Top-quality hardware tools and expert construction services for every project need."
     primaryBtn="Start Exploring"
     primaryBtnURL="/products"
