--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const avatarSrcs: Array<string> = [
   />
 
   <HeroSection
-    title=`TOOORAK CS <span
+    title=`TOOORAK CS LOve<span
         class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
     subTitle="Top-quality hardware tools and expert construction services for every project need."
     primaryBtn="Start Exploring"
