--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,12 +30,12 @@ const avatarSrcs: Array<string> = [
 <MainLayout>
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
+    btnTitle="Explore ScrewFast on Jesus Slash"
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 
   <HeroSection
-    title=`Equip Your Projects with <span
+    title=`Equip Your Projects with WeFo Slash Live<span
         class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
     subTitle="Top-quality hardware tools and expert construction services for every project need."
     primaryBtn="Start Exploring"
