--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,12 +30,12 @@ const avatarSrcs: Array<string> = [
 <MainLayout>
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
+    btnTitle="Explore WeFloSlash on LinkedIn"
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 
   <HeroSection
-    title=`TOOORAK CS LOve<span
+    title=`TOOORAK CS LOve HIgh <span
         class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
     subTitle="Top-quality hardware tools and expert construction services for every project need."
     primaryBtn="Start Exploring"
@@ -48,7 +48,7 @@ const avatarSrcs: Array<string> = [
     starCount={4}
     reviews=`From Over <span class="font-bold">12.8k</span> Reviews`
     src={heroImage}
-    alt="Stack of ScrewFast product boxes containing assorted hardware tools"
+    alt="Stack GARDENING ISSUES"
   />
 
   <ClientsSection
