--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const avatarSrcs: Array<string> = [
     starCount={4}
     reviews=`From Over <span class="font-bold">12.8k</span> Reviews`
     src={heroImage}
-    alt="Stack GARDENING ISSUES"
+    alt="Stack CYNERSECURITY"
   />
 
   <ClientsSection
